Created components and connected to backend
